# doneproof

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  action.yml  pyproject.toml
.doneproof/: policy.yml
.doneproof/templates/: aider.md  claude.md  cline.md  codex.md  cursor.md  hermes.md  openclaw.md  opencode.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent_integration.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: action-smoke.yml  ci.yml  security.yml
docs/: ADVERSARIAL_REVIEW.md  ARCHITECTURE.md  CODE_QUALITY_REVIEW.md  DEMO.md  EDITOR_TASKS.md  EXAMPLES.md  FIELD_LESSONS.md  GITHUB_ACTION.md  GITHUB_IMPORT_RUNBOOK.md  INTEGRATIONS.md  LAUNCH_COPY.md  LAUNCH_PLAN.md  POLICY_PRESETS.md  PRE_GITHUB_AUDIT.md  PUBLISHING_CHECKLIST.md  PYPI_READINESS.md  RECEIPT_SCHEMA.md  RELEASE_NOTES.md  VALUE_PROOF.md
docs/examples/: cursor-doneproof-rule.mdc  github-pr-comment.expected.md  github-pr-comment.yml  vscode-tasks.json
docs/integrations/: AIDER.md  CLAUDE.md  CLINE.md  CODEX.md  CURSOR.md  HERMES.md  OPENCLAW.md  OPENCODE.md
examples/policies/: ci-gated.yml  solo.yml  team.yml
examples/receipts/: README.md  failing.json  passing.json
scripts/: prepublish_check.sh  render_demo_gif.py
src/doneproof/: __init__.py  __main__.py  cli.py  defaults.py  doctor.py  git.py  policy.py  receipt.py  schema.py
src/doneproof/schemas/: __init__.py  receipt.schema.json
tests/: test_cli.py  test_git.py  test_project_files.py  test_receipt.py
